--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   lottie: ^1.3.0
+  sqflite: ^2.0.3+1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
